[package]
name = "snake"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.82"
js-sys = "0.3.59"

[dependencies.web-sys]
version = "0.3.59"
features = [
  "Document", "Element", "HtmlElement", "Window", "console",
  "CssStyleDeclaration", "HtmlDivElement", "KeyboardEvent"
]
